# patchcap

./: .gitignore  README.md  patch data collection_002_rigid_body_motion.csv  pyproject.toml
scripts/: read_tak  read_tak.py  visualize_tak_markers_open3d.py
scripts/cameras/: collect_episodes.py  list_cameras.py  test_cameras.py
src/patchcap/: __init__.py
