[project]
name = "patchcap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cunxid", email = "cunxid51@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "open3d>=0.19.0",
    "opencv-python>=4.10.0",
    "pyudev>=0.24.4; platform_system == 'Linux'",
]

[project.scripts]
patchcap = "patchcap:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
